--- a/saic-java-mqtt-gateway/pom.xml
+++ b/saic-java-mqtt-gateway/pom.xml
@@ -30,6 +30,11 @@
       <version>1.2.5</version>
     </dependency>
     <dependency>
+      <groupId>com.owlike</groupId>
+      <artifactId>genson-java-datetime</artifactId>
+      <version>1.6</version>
+    </dependency>
+    <dependency>
       <groupId>io.github.saic-ismart-api</groupId>
       <artifactId>saic-ismart-api</artifactId>
       <version>${project.version}</version>
