--- a/saic-java-api-cli/pom.xml
+++ b/saic-java-api-cli/pom.xml
@@ -11,6 +11,9 @@
   <artifactId>saic-ismart-cli</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <name>SAIC Java API - CLI</name>
+  <description>CLI Implementation of the SAIC API in Java</description>
+
   <dependencies>
     <dependency>
       <groupId>io.github.saic-ismart-api</groupId>
