--- a/.github/workflows/maven_deploy.yml
+++ b/.github/workflows/maven_deploy.yml
@@ -18,8 +18,8 @@ jobs:
       GITHUB_ACTOR: ${{ github.actor }}
       GITHUB_TOKEN: ${{ github.token }}
       # usernames are stored as secrets, so we have all authentication information together as one type
-      OSSRH_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-      OSSRH_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+      OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+      OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
       # support dockerhub organizations. If none is present, use the dockerhub username
