--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
   </developers>
   <modules>
     <module>saic-java-api</module>
+    <module>saic-java-client</module>
     <module>saic-java-api-gateway</module>
     <module>saic-java-api-cli</module>
     <module>saic-java-mqtt-gateway</module>
