--- a/saic-java-api-gateway/pom.xml
+++ b/saic-java-api-gateway/pom.xml
@@ -28,6 +28,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>io.github.saic-ismart-api</groupId>
+      <artifactId>saic-ismart-client</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.owlike</groupId>
       <artifactId>genson</artifactId>
     </dependency>
