--- a/saic-java-mqtt-gateway/pom.xml
+++ b/saic-java-mqtt-gateway/pom.xml
@@ -77,6 +77,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>io.github.saic-ismart-api</groupId>
+      <artifactId>saic-ismart-client</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>5.9.2</version>
