--- a/.github/workflows/dependabot_changelog.yml
+++ b/.github/workflows/dependabot_changelog.yml
@@ -31,4 +31,4 @@ jobs:
       # See https://github.com/stefanzweifel/git-auto-commit-action#commits-of-this-action-do-not-trigger-new-workflow-runs
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "Updated Changelog"
+          commit_message: "Updated Changelog\n\n[dependabot skip]"
