--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,13 @@
-name: Java CI with Maven - Deploy
+name: Java CI with Maven
 
 on:
   push:
     branches:
-      - '**'
+      - 'main'
+      - 'release-*'
     tags:
       - "v*.*.*"
+  pull_request:
 
 # TODO: only request needed permissions
 permissions: write-all
@@ -52,8 +54,8 @@ jobs:
       - name: Deploy
         run: SIGN_KEY=${{ secrets.GPG_SECRET_KEYS }} SIGN_KEY_PASS=$(echo ${{ secrets.GPG_PASSPHRASE }} | base64 --decode) ./mvnw --no-transfer-progress -B ${MAVEN_PHASE} -Dgithub.repository=${{ github.repository }} -Dversioning.disable=false -Ddist.oci.registry=ghcr.io/${{ steps.lowercase-repository-owner.outputs.lowercase }}/
         env:
-          # dependabot has no deploy rights
-          MAVEN_PHASE: ${{ github.actor == 'dependabot[bot]' && 'install' || 'deploy' }}
+          # Never deploy PRs
+          MAVEN_PHASE: ${{ github.event_name == 'pull_request' && 'install' || 'deploy' }}
       - name: tag main branch as latest
         if: github.ref_name == 'main'
         run: git tag -f latest
