--- a/saic-java-api/pom.xml
+++ b/saic-java-api/pom.xml
@@ -19,6 +19,11 @@
       <groupId>net.heberling.binarynotes</groupId>
       <artifactId>binarynotes</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
