--- a/.github/workflows/dependabot_changelog.yml
+++ b/.github/workflows/dependabot_changelog.yml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: dangoslen/dependabot-changelog-helper@v3
         with:
-          activationLabel: 'dependencies'
+          activationLabels: 'dependencies'
           changelogPath: './CHANGELOG.md'
 
       - uses: stefanzweifel/git-auto-commit-action@v5
