Add 2 new projects with API code from:  - Markus's api branch  - message java objects for serialization  - an working rest client implementation in java  - unit test against api if environment vars are set

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
     <module>saic-java-client</module>
     <module>saic-java-api-gateway</module>
     <module>saic-java-api-cli</module>
+    <module>saic-java-rest-api</module>
+    <module>saic-java-rest-client</module>
     <module>saic-java-mqtt-gateway</module>
   </modules>
   <scm>
